cluster/apps/home/home-assistant/influxdb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-dashboard
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "hass-influxdb.${SECRET_DOMAIN}"
      secretName: "hass-influxdb-dashboard-tls"
  rules:
    - host: "hass-influxdb.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-influxdb
                port:
                  number: 8086
